# darimasen-svn

0.0.x/: ChangeLog  LICENSE  NEWS  README  STANDARDS  autogen.sh  darimasen-0.0.8a.ebuild  darimasen-svn-0.1-r1.ebuild  darimasen-svn-0.1-r2.ebuild  darimasen.desktop  distribute.sh
0.0.x/pixmaps/: Makefile.am
0.0.x/pixmaps/16x16/: Makefile.am
0.0.x/pixmaps/48x48/: Makefile.am
0.0.x/src/: Makefile.am  damenu.h  darimasen.h  iconmodes.cpp  main.h  supplimental.cpp  supplimental.h
trunk/: AUTHORS  ChangeLog  Darimasen  INSTALL  Makefile  Makefile.am  README  TODO  autogen.sh  configure.in  darimasen-0.0.7.ebuild  darimasen-0.0.8.ebuild  darimasen-svn-0.1.ebuild  darimasen-svn-0.2.ebuild  distribute.sh
trunk/pixmaps/: Makefile.am
trunk/pixmaps/scalable/: Makefile.am
trunk/src/: Makefile.am  damenu.cpp  damenu.h  darimasen.cpp  darimasen.h  darimasen.txt  directory.cpp  directory.h  directory.txt  dirtree.cpp  dirtree.h  firsttime.cpp  firsttime.h  icon.cpp  icon.h  icon.txt  iconmodes.cpp  iconmodes.h  main.cpp  main.h  main.txt  menu.cpp  menu.h  menu.txt  mimehandler.c  mimehandler.h  optionsManager.cpp  optionsManager.h  preferences.txt  safestring.c  safestring.h  sidecon.cpp  sidecon.h  supplimental.cpp  supplimental.h  supplimental.txt  tabs.cpp  tabs.h  tabs.txt
