# generated 2004/9/10 11:30:35 CEST by nick@frisbee.mnc.ch.(none)
# using glademm V2.6.0_cvs

AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(darimasen, 0.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PKG_CHECK_MODULES([PKG], [sigc++-2.0 >= 2.0 gtkmm-2.4 >= 2.4.0 gnome-vfsmm-2.6 >= 2.5.0])
AC_SUBST([PKG_CFLAGS])
AC_SUBST([PKG_LIBS])


AC_OUTPUT(Makefile src/Makefile )
